--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Node bindings for mknod",
   "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "nan": "^2.0.8",
     "node-gyp-build": "^3.2.0"
